# cauto

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROUTING.md
.github/workflows/: ci.yml
scripts/: bench.sh  install.sh
src/: cli.rs  error.rs  lib.rs  main.rs  paths.rs
src/app_server/: mod.rs
src/application/: agent.rs  commands.rs  decision.rs  mod.rs  prompt.rs  route.rs
src/cache/: atomic.rs  envelope.rs  mod.rs
src/classifier/: mod.rs  prompt.rs  runner.rs  schema.rs
src/codex/: args.rs  binary.rs  capabilities.rs  catalog.rs  launch.rs  mod.rs  version.rs
src/config/: load.rs  merge.rs  mod.rs  schema.rs  validate.rs
src/context/: agents.rs  git.rs  mod.rs  repository.rs
src/output/: human.rs  json.rs  mod.rs
src/routing/: confidence.rs  explain.rs  features.rs  mod.rs  rules.rs  score.rs  select.rs  semantic.rs  task_budget.rs  types.rs
src/state/: decision_log.rs  feedback.rs  mod.rs  report.rs  tuning.rs
tests/: catalog.rs  classifier.rs  cli.rs  config.rs  explain.rs  forwarding.rs  installer.rs  logging.rs  router_quality.rs  routing.rs  tuning.rs
tests/common/: mod.rs
tests/fixtures/: catalog.json
