[package]
name = "cauto"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "Repository-aware native Codex model and reasoning router"
license = "MIT"
repository = "https://github.com/feveromo/cauto"
homepage = "https://github.com/feveromo/cauto"
readme = "README.md"
keywords = ["codex", "cli", "ai", "router", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cauto"
path = "src/lib.rs"

[[bin]]
name = "cauto"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1"
clap = { version = "4.5", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
clap_complete = "4.5"
directories = "6.0"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
toml = "0.9"
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["process", "signal"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.7"
tempfile = "3.20"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
